Ignore DSC comments in nested EPS files and data blocks. Thanks to William Bader for the patch. Bug 689791.

RIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8653 a1074d23-0009-0410-80fe-cf8c14f379e6